# mdstat2collectd

./: CMakeLists.txt  LICENSE  README.md  mdstat.txt  mdstat2collectd.conf.example
src/: main.c  mdstat2collectd.h  mdstat_data.h  mdstat_reader.c  mdstat_reader.h  output_collectd.c  output_collectd.h  utils.c  utils.h
